19578
```scala
Java HotSpot(TM) 64-Bit Server VM warning: ignoring option MaxPermSize=256M; support was removed in 8.0
[info] Starting scala interpreter...
import awscala._
import s3._
Welcome to Scala version 2.11.5 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_31).

scala>               Region.US_WEST_1
res0: awscala.Region = us-west-1

scala>               Region.US_WEST_1
<console>:14: error: value US_WEST_1 is not a member of object awscala.Region
                            Region.US_WEST_1
                                   ^
```
```scala
scalaVersion := "2.11.5"
libraryDependencies +=  "com.github.seratch" %% "awscala" % "0.4.4"
initialCommands in console := "import awscala._, s3._"
```
```scala
sbt.version = 0.13.8-M3
```
